--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>My Git Project</title>
 </head>
 <body>
-    <h1>Hello, Git! I am Groot
-        <h2>Hello, Groot! I am Maggie</h2>
+    <h1>Hello, Git! I am Maggie
     </h1>
 </body>
 </html>
